Updated Mod3_3 HTML and CSS for border fix and link alignment

--- a/module-3/Long_Mod3_3.css
+++ b/module-3/Long_Mod3_3.css
@@ -16,7 +16,7 @@ h1 {
   width: 100%;
   margin-top: 60px;
   margin-bottom: 20px;
-  float: right;
+  text-align: right;
 }
 
 /* Set h3 font weight */
@@ -29,23 +29,32 @@ ol, ul {
   font-weight: 300;
 }
 
-/* Ordered list and its title */
-.left-div h3,
-.left-div ol {
-  border: 1px solid red;
+/* Common border box style */
+.left-div .border-box,
+.right-div .border-box {
   border-radius: 15px;
   padding: 10px;
-  list-style-position: inside;
 }
 
-/* Unordered list and its title */
-.right-div h3,
-.right-div ul {
+/* Specific borders */
+.left-div .border-box {
+  border: 1px solid red;
+}
+
+.right-div .border-box {
   border: 1px dashed red;
-  border-radius: 15px;
-  padding: 10px;
-  list-style: upper-roman;
+}
+
+/* Ordered list style */
+.left-div ol,
+.right-div ul {
   list-style-position: inside;
+  margin: 0;
+  padding-left: 20px;
+}
+
+.right-div ul {
+  list-style-type: upper-roman;
 }
 
 /* Link hover effect */
